tests/snapshots/tui_drop_confirm__drop_conflict_dialog_still_unresolved_warning.snap
---
source: tests/tui_drop_confirm.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor parser module                                               ",
        "def456gh   Add feature X                                                        ",
        "                                                                                ",
        "         ┌ Drop Conflict ─────────────────────────────────────────────┐         ",
        "         │                                                            │         ",
        "         │ Merge conflict during drop                                 │         ",
        "         │                                                            │         ",
        "         │ Conflict in abc123de                                       │         ",
        "         │ Refactor parser module                                     │         ",
        "         │                                                            │         ",
        "         │ Conflicting files:                                         │         ",
        "         │ src/parser/mod.rs                                          │         ",
        "         │                                                            │         ",
        "         │ ! Still unresolved — fix all conflicts above before        │         ",
        "         │ continuing                                                 │         ",
        "         │                                                            │         ",
        "         │     Enter Continue   m Mergetool   e Editor   Esc Abort    │         ",
        "         │                                                            │         ",
        "         └────────────────────────────────────────────────────────────┘         ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 37, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 62, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 21, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 32, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 46, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 48, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 18, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
